--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: My Blogs
 email: syahrudinsmj@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Kumpulan oret-oret seorang suami yang sedang belajar bahasa pemprograman.
-domain: smj-labs.web.app 
+domain: smj-labs.github.io 
 baseurl: "/blogs" # the subpath of your site, e.g. /blog
 url: "https://smj-labs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
